--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,19 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-# UI
-iced = { version = "0.12", features = ["tokio"] }
+iced = { version = "0.13.1", features = ["tokio"] }
+reqwest = { version = "0.12", features = ["json"] }
+tokio = "1"
+serde = "1"
+serde_json = "1"
+thiserror = "2.0.17"
+async-trait = "0.1"
 
-# HTTP
-reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
-tokio   = { version = "1", features = ["rt-multi-thread", "macros"] }
-
-# Dados
-serde        = { version = "1", features = ["derive"] }
-serde_json   = "1"
-thiserror    = "1"
-anyhow       = "1"
-directories  = "5"
-
-# Util
-once_cell = "1"
+[features]
+http-mock = []
