--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,15 +12,15 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            bin_name: patchlite
+            bin_name: patch-lite
             out_name: PatchLite-linux
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            bin_name: patchlite.exe
+            bin_name: patch-lite.exe
             out_name: PatchLite-windows
           - os: macos-latest
             target: aarch64-apple-darwin
-            bin_name: patchlite
+            bin_name: patch-lite
             out_name: PatchLite-macos-arm64
 
 
